--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
